# ripple-monzo-script

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
monzo_script/: account_processor.py  main.py  monzo_pots.py  pot_distrobuters.py  pot_manager.py  transaction_controlers.py
